--- a/app/src/main/res/layout/oldgame_item.xml
+++ b/app/src/main/res/layout/oldgame_item.xml
@@ -257,7 +257,7 @@
                         android:layout_marginTop="@dimen/standard_margin"
                         android:gravity="center"
                         android:orientation="vertical"
-                        tools:visibility="gone">
+                        tools:visibility="visible">
 
                         <TextView
                             android:layout_width="wrap_content"
