--- a/app/src/main/res/layout/game_list_round_item.xml
+++ b/app/src/main/res/layout/game_list_round_item.xml
@@ -13,7 +13,7 @@
 
     <!-- Bottom View Start-->
 
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/bottom_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -31,7 +31,7 @@
             android:tint="@color/grayMM"
             tools:ignore="ContentDescription"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <!-- Bottom View End-->
 
