--- a/app/src/main/res/layout/game_table_seat_fragment.xml
+++ b/app/src/main/res/layout/game_table_seat_fragment.xml
@@ -43,7 +43,7 @@
             android:layout_marginLeft="@dimen/standard_margin"
             android:layout_marginStart="@dimen/standard_margin"
             android:layout_centerVertical="true"
-            android:textColor="@color/purple"
+            android:textColor="@color/redPenalty"
             android:textSize="@dimen/table_player_penalty_points_text_size"
             android:textStyle="bold"
             tools:text="-60" />
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="@dimen/standard_margin"
+        android:layout_marginBottom="@dimen/double_standard_margin"
         android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_name_text_size"
         android:textStyle="bold"
