--- a/app/src/main/res/layout/game_table_fragment.xml
+++ b/app/src/main/res/layout/game_table_fragment.xml
@@ -1,110 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:background="@android:color/white">
 
-    <LinearLayout
-        android:id="@+id/llGameTableRoundNumberAndWindContainer"
-        android:layout_width="64dp"
-        android:layout_height="48dp"
+    <fragment
+        android:id="@+id/fGameTableSeats"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/ivGameTableRoundWind"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:gravity="center"
-            android:src="@drawable/ic_east" />
-
-        <TextView
-            android:id="@+id/tvGameTableRoundNumber"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:text="16" />
-
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/llGameTableRoundNumberAndWindContainer"
-        android:layout_centerHorizontal="true"
-        android:rotation="0">
-
-        <fragment
-            android:id="@+id/fGameTableSeatEast"
-            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/double_standard_margin"
-        android:layout_marginRight="@dimen/double_standard_margin"
-        android:layout_toEndOf="@+id/llGameTableRoundNumberAndWindContainer"
-        android:layout_toRightOf="@+id/llGameTableRoundNumberAndWindContainer"
-        android:rotation="-90">
-
-        <fragment
-            android:id="@+id/fGameTableSeatSouth"
-            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal" />
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/llGameTableRoundNumberAndWindContainer"
-        android:layout_centerHorizontal="true"
-        android:rotation="180">
-
-        <fragment
-            android:id="@+id/fGameTableSeatWest"
-            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/double_standard_margin"
-        android:layout_marginLeft="@dimen/double_standard_margin"
-        android:layout_toStartOf="@+id/llGameTableRoundNumberAndWindContainer"
-        android:layout_toLeftOf="@+id/llGameTableRoundNumberAndWindContainer"
-        android:rotation="90">
-
-        <fragment
-            android:id="@+id/fGameTableSeatNorth"
-            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal" />
-
-    </FrameLayout>
+        android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatsFragment"/>
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/famGameTable"
