Improved table with new VerticalTextView

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,6 +2,6 @@
 <resources>
     <array name="swipeRefreshColors">
         <item>@color/colorPrimary</item>
-        <item>@color/purple</item>
+        <item>@color/purplePenalty</item>
     </array>
 </resources>
