--- a/app/src/main/res/layout/game_table_seats_fragment.xml
+++ b/app/src/main/res/layout/game_table_seats_fragment.xml
@@ -23,46 +23,35 @@
 
     <TextView
         android:id="@+id/tvTableSeatEastPoints"
+        style="@style/tvTableSeatEast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:text="000"
-        android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_points_text_size"
-        android:textStyle="bold" />
+        tools:text="-000" />
 
     <TextView
         android:id="@+id/tvTableSeatEastPenaltyPoints"
+        style="@style/tvTableSeatEast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/half_standard_margin"
         android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
-        android:layout_marginTop="@dimen/standard_margin"
+        android:layout_alignTop="@+id/tvTableSeatEastPoints"
         android:layout_toRightOf="@+id/tvTableSeatEastPoints"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:text="000"
-        android:textColor="@color/redPenalty"
+        android:textColor="@color/purplePenalty"
         android:textSize="@dimen/table_player_penalty_points_text_size"
-        android:textStyle="bold"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        tools:text="-000" />
 
     <TextView
         android:id="@+id/tvTableSeatEastName"
+        style="@style/tvTableSeatEast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTableSeatEastPoints"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:text="@string/player_east_name"
-        android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_name_text_size"
-        android:textStyle="bold" />
+        tools:text="@string/player_east_name" />
 
     <!-- SOUTH -->
     <ImageView
@@ -76,54 +65,39 @@
         tools:ignore="RtlHardcoded"
         tools:src="@drawable/ic_south" />
 
-    <TextView
+    <es.etologic.mahjongscoring2.app.custom_views.VerticalTextView
         android:id="@+id/tvTableSeatSouthPoints"
+        style="@style/tvTableSeatSouth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/standard_margin"
         android:layout_toRightOf="@+id/ivTableSeatSouthSeatWindIcon"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="-90"
-        android:text="000"
-        android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_points_text_size"
-        android:textStyle="bold"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        tools:text="-000" />
 
-    <TextView
+    <es.etologic.mahjongscoring2.app.custom_views.VerticalTextView
         android:id="@+id/tvTableSeatSouthPenaltyPoints"
+        style="@style/tvTableSeatSouth"
         android:layout_width="wrap_content"
+        android:layout_marginBottom="@dimen/half_standard_margin"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tvTableSeatSouthPoints"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/standard_margin"
+        android:layout_alignLeft="@+id/tvTableSeatSouthPoints"
         android:layout_toRightOf="@+id/ivTableSeatSouthSeatWindIcon"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="-90"
-        android:text="000"
-        android:textColor="@color/redPenalty"
+        android:textColor="@color/purplePenalty"
         android:textSize="@dimen/table_player_penalty_points_text_size"
-        android:textStyle="bold"
+        tools:text="-000"
         tools:ignore="RtlHardcoded" />
 
-    <TextView
+    <es.etologic.mahjongscoring2.app.custom_views.VerticalTextView
         android:id="@+id/tvTableSeatSouthName"
+        style="@style/tvTableSeatSouth"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:gravity="center"
         android:layout_toRightOf="@+id/tvTableSeatSouthPoints"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="-90"
-        android:text="@string/player_south_name"
-        android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_name_text_size"
-        android:textStyle="bold"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        tools:text="@string/player_south_name" />
 
     <!-- WEST -->
     <ImageView
@@ -138,49 +112,35 @@
 
     <TextView
         android:id="@+id/tvTableSeatWestPoints"
+        style="@style/tvTableSeatWest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ivTableSeatWestSeatWindIcon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/standard_margin"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="180"
-        android:text="000"
-        android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_points_text_size"
-        android:textStyle="bold" />
+        tools:text="-000" />
 
     <TextView
         android:id="@+id/tvTableSeatWestPenaltyPoints"
+        style="@style/tvTableSeatWest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ivTableSeatWestSeatWindIcon"
-        android:layout_marginBottom="@dimen/standard_margin"
+        android:layout_marginRight="@dimen/half_standard_margin"
+        android:layout_alignBottom="@+id/tvTableSeatWestPoints"
         android:layout_toLeftOf="@+id/tvTableSeatWestPoints"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="180"
-        android:text="000"
-        android:textColor="@color/redPenalty"
+        android:textColor="@color/purplePenalty"
         android:textSize="@dimen/table_player_penalty_points_text_size"
-        android:textStyle="bold"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        tools:text="-000" />
 
     <TextView
         android:id="@+id/tvTableSeatWestName"
+        style="@style/tvTableSeatWest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tvTableSeatWestPoints"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/standard_margin"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="180"
-        android:text="@string/player_west_name"
-        android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_name_text_size"
-        android:textStyle="bold" />
+        tools:text="@string/player_west_name" />
 
     <!-- NORTH -->
     <ImageView
@@ -194,52 +154,39 @@
         tools:ignore="RtlHardcoded"
         tools:src="@drawable/ic_north" />
 
-    <TextView
+    <es.etologic.mahjongscoring2.app.custom_views.VerticalTextView
         android:id="@+id/tvTableSeatNorthPoints"
+        style="@style/tvTableSeatNorth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/standard_margin"
         android:layout_toLeftOf="@+id/ivTableSeatNorthSeatWindIcon"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="90"
-        android:text="000"
-        android:textColor="@color/grayMM"
         android:textSize="@dimen/table_player_points_text_size"
-        android:textStyle="bold"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        tools:text="-000" />
 
-    <TextView
+    <es.etologic.mahjongscoring2.app.custom_views.VerticalTextView
         android:id="@+id/tvTableSeatNorthPenaltyPoints"
+        style="@style/tvTableSeatNorth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/half_standard_margin"
         android:layout_below="@+id/tvTableSeatNorthPoints"
-        android:layout_marginRight="@dimen/standard_margin"
+        android:layout_alignRight="@+id/tvTableSeatNorthPoints"
         android:layout_toLeftOf="@+id/ivTableSeatNorthSeatWindIcon"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="90"
-        android:text="000"
-        android:textColor="@color/redPenalty"
+        android:textColor="@color/purplePenalty"
+        tools:text="-000"
         android:textSize="@dimen/table_player_penalty_points_text_size"
-        android:textStyle="bold"
         tools:ignore="RtlHardcoded" />
 
-    <TextView
+    <es.etologic.mahjongscoring2.app.custom_views.VerticalTextView
         android:id="@+id/tvTableSeatNorthName"
+        style="@style/tvTableSeatNorth"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/tvTableSeatNorthPoints"
-        android:includeFontPadding="false"
-        android:lines="1"
-        android:rotation="90"
-        android:text="@string/player_north_name"
         android:gravity="center"
-        android:textColor="@color/grayMM"
+        tools:text="@string/player_north_name"
         android:textSize="@dimen/table_player_name_text_size"
-        android:textStyle="bold"
         tools:ignore="RtlHardcoded" />
 
 </RelativeLayout>
