--- a/app/src/main/res/layout/game_table_fragment.xml
+++ b/app/src/main/res/layout/game_table_fragment.xml
@@ -75,7 +75,7 @@
             app:fab_colorNormal="@color/colorPrimary"
             app:fab_colorPressed="@color/colorPrimaryDark"
             app:fab_colorRipple="@color/colorPrimaryDark"
-            app:fab_label="@string/hu_wall"
+            app:fab_label="@string/hu_selfpick"
             app:fab_size="mini" />
 
         <com.github.clans.fab.FloatingActionButton
