--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -4,17 +4,23 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_players"
+        android:icon="@drawable/ic_person_add_white_24dp"
+        android:title="@string/players"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/action_play"
         android:icon="@drawable/ic_play_arrow_white_24px"
         android:title="@string/play"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_pause"
         android:icon="@drawable/ic_pause_white_24dp"
         android:title="@string/pause"
         android:visible="false"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         tools:ignore="AlwaysShowAction"/>
 
 </menu>
