--- a/app/src/main/res/layout/game_table_fragment.xml
+++ b/app/src/main/res/layout/game_table_fragment.xml
@@ -1,16 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
+    <LinearLayout
+        android:id="@+id/llGameTableRoundNumberAndIconContainerUp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/double_standard_margin"
+        android:layout_marginBottom="@dimen/double_standard_margin"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/ivGameTableRoundWindUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:rotation="180"
+            android:textColor="@color/gray2"
+            tools:src="@drawable/ic_east" />
+
+        <TextView
+            android:id="@+id/tvGameTableRoundNumberUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_marginLeft="@dimen/standard_margin"
+            android:rotation="180"
+            android:textColor="@color/gray2"
+            android:textSize="@dimen/table_player_round_num_text_size"
+            android:textStyle="bold"
+            tools:text="16" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llGameTableRoundNumberAndIconContainerDown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="@dimen/double_standard_margin"
+        android:layout_marginBottom="@dimen/double_standard_margin"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/ivGameTableRoundWindDown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:tint="@color/gray2"
+            tools:src="@drawable/ic_east" />
+
+        <TextView
+            android:id="@+id/tvGameTableRoundNumberDown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_marginLeft="@dimen/standard_margin"
+            android:textColor="@color/gray2"
+            android:textSize="@dimen/table_player_round_num_text_size"
+            android:textStyle="bold"
+            tools:text="16" />
+
+    </LinearLayout>
+
     <fragment
         android:id="@+id/fGameTableSeats"
+        android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatsFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatsFragment"/>
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/llGameTableRoundNumberAndIconContainerDown"
+        android:layout_below="@+id/llGameTableRoundNumberAndIconContainerUp"
+        android:layout_centerInParent="true" />
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/famGameTable"
@@ -103,6 +168,19 @@
         android:layout_marginBottom="@dimen/half_standard_margin"
         android:rotation="45"
         android:src="@drawable/fab_add"
+        android:visibility="gone" />
+
+    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/fabGameTableRanking"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="@dimen/half_standard_margin"
+        android:layout_marginRight="@dimen/half_standard_margin"
+        android:layout_marginBottom="@dimen/half_standard_margin"
+        android:src="@drawable/ic_trophy_white_18dp"
         android:visibility="gone" />
 
     <LinearLayout
