--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -4,15 +4,22 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_combinations"
+        android:icon="@drawable/ic_library_books_white_24dp"
+        android:title="@string/combinations"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/action_players"
         android:icon="@drawable/ic_person_add_white_24dp"
-        android:title="@string/players"
-        app:showAsAction="ifRoom"/>
+        android:title="@string/edit_names"
+        app:showAsAction="collapseActionView"/>
 
     <item
         android:id="@+id/action_play"
         android:icon="@drawable/ic_play_arrow_white_24px"
         android:title="@string/play"
+        android:visible="false"
         app:showAsAction="ifRoom"/>
 
     <item
