--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,12 +8,14 @@
     <dimen name="double_standard_margin">32dp</dimen>
     <dimen name="triple_standard_margin">48dp</dimen>
     <dimen name="quadruple_standard_margin">64dp</dimen>
+    <dimen name="quintuple_margin">80dp</dimen>
 
     <!-- TOOLBAR-->
     <dimen name="toolbar_elevation">4dp</dimen>
 
     <!-- DRAWER -->
     <dimen name="drawer_header_height">160dp</dimen>
+    <dimen name="bottom_navigation_menu_height">56dp</dimen>
 
     <!-- OLD GAMES -->
     <dimen name="cardCornerRadius">4dp</dimen>
@@ -26,10 +28,9 @@
     <dimen name="combination_item_cardview_full_height">92dp</dimen>
 
     <!-- GAME -->
-    <dimen name="bottom_navigation_menu_height">56dp</dimen>
-    <dimen name="quintuple_margin">80dp</dimen>
     <dimen name="table_player_points_text_size">36sp</dimen>
     <dimen name="table_player_name_text_size">32sp</dimen>
     <dimen name="table_player_penalty_points_text_size">20sp</dimen>
+    <dimen name="table_player_round_num_text_size">24sp</dimen>
 
 </resources>
